2011-11-28  Adam Barth  <abarth@webkit.org>

        Add missing forwaring headers.

        * public/android/WebThemeEngine.h: Added.
        * public/linux/WebThemeEngine.h: Added.
        * public/mac/WebThemeEngine.h: Added.
        * public/win/WebThemeEngine.h: Added.

2011-11-27  Yury Semikhatsky  <yurys@chromium.org>

        Unreviewed. Revert r101226.

        * DEPS:

2011-11-27  Yury Semikhatsky  <yurys@chromium.org>

        Unreviewed. Update Chromium revision.

        * DEPS:

2011-11-24  Adam Barth  <abarth@webkit.org>

        [Chromium] Move the next traunch of headers into public/platform
        https://bugs.webkit.org/show_bug.cgi?id=73073

        Reviewed by Darin Fisher.

        These headers are all the forward-declared classes in
        WebKitPlatformSupport (and their dependencies) that wrap concepts in
        WebCore/platform.

        There are a number of forward-declared classes in WebKitPlatformSupport
        that coorespond to WebCore concepts outside of WebCore/platform.  I've
        marked these with FIXME comments.  We'll need to study them in more
        detail to see whether they should move into WebCore/platform or whether
        we need to move them out of WebKitPlaformSupport.h.  (One possible
        resolution might be to introducing a WebKitClientSupport.h to hold
        statics for client concepts).

        * public/WebBlobRegistry.h: Replaced.
        * public/WebCanvas.h: Replaced.
        * public/WebClipboard.h: Replaced.
        * public/WebColor.h: Replaced.
        * public/WebColorName.h: Replaced.
        * public/WebCommonWorkerClient.h:
        * public/WebCompositionUnderline.h:
        * public/WebContentLayerClient.h:
        * public/WebContextMenuData.h:
        * public/WebCookieJar.h: Replaced.
        * public/WebCursorInfo.h:
        * public/WebDragData.h: Replaced.
        * public/WebFileSystem.h: Replaced.
        * public/WebFloatQuad.h:
        * public/WebFont.h: